internal/octogo/testdata/06_invalid_redeclarations.ogo
var a int = 1
// ERROR "a redeclared in this block|already declared"
var a int = 2

// ERROR "a redeclared in this block" (Note: package block collision)
func a() {
}

func process(x int, y int) {
	// ERROR "x redeclared in this block" (Parameter scope is the function body)
	var x int = 5

	// Go semantics: ":=" with no new variable on the left is not a redeclaration.
	// ERROR "no new variables on left side of :=|y redeclared"
	y := 10
}
